# QUASAR

./: CMakeLists.txt  README.md
apps/Common/: CMakeLists.txt
apps/Common/include/: BC4DepthStreamer.h  BC4DepthVideoTexture.h  CameraPose.h  DepthMesh.h  DepthStreamer.h  DepthVideoTexture.h  HoleFiller.h  PoseReceiver.h  PoseSendRecvSimulator.h  PoseStreamer.h  QSStreamer.h  QUASARReceiver.h  QUASARStreamer.h  QuadStreamReceiver.h  QuadStreamStreamer.h  QuadsReceiver.h  QuadsStreamer.h  Recorder.h  VideoStreamer.h  VideoTexture.h
apps/Common/include/Codec/: AlphaCodec.h  Codec.h  LZ4Codec.h  ZSTDCodec.h
apps/Common/include/Codecs/: AlphaCodec.h  Codec.h  LZ4Codec.h  ZSTDCodec.h
apps/Common/include/CudaGLInterop/: CudaGLBuffer.h  CudaGLImage.h  CudaUtils.h
apps/Common/include/Networking/: DataReceiverTCP.h  DataReceiverUDP.h  DataStreamerTCP.h  DataStreamerUDP.h  Socket.h  Utils.h
apps/Common/include/Quads/: DepthOffsets.h  FrameGenerator.h  MeshFromQuads.h  QuadBuffers.h  QuadFrame.h  QuadFrames.h  QuadMaterial.h  QuadMesh.h  QuadSet.h  QuadVertex.h  QuadsBuffers.h  QuadsGenerator.h
apps/Common/include/Receivers/: BC4DepthVideoTexture.h  DepthVideoTexture.h  QUASARReceiver.h  QuadStreamReceiver.h  QuadsReceiver.h  VideoTexture.h
apps/Common/include/Streamers/: BC4DepthStreamer.h  DepthStreamer.h  PoseStreamer.h  QUASARStreamer.h  QuadStreamStreamer.h  QuadsStreamer.h  VideoStreamer.h
apps/Common/include/UI/: FrameCaptureWindow.h  FrameRateWindow.h  RecordWindow.h  TexturePreviewWindow.h
apps/Common/shaders/: atw.frag  hole_filler.frag  mesh_from_bc4.comp  mesh_from_depth.comp  tonemap.glsl
apps/Common/shaders/quads/: append_quads.comp  create_quadmap.comp  fill_quad_indices.comp  gather_quads.comp  gen_quadmap.comp  material_quad.frag  material_quad.vert  mesh_from_quads.comp  quads_utils.glsl  simplify_quadmap.comp
apps/Common/src/: BC4DepthStreamer.cpp  BC4DepthVideoTexture.cpp  DataReceiverTCP.cpp  DataReceiverUDP.cpp  DataStreamerTCP.cpp  DepthStreamer.cpp  DepthVideoTexture.cpp  PoseSendRecvSimulator.cpp  QRStreamer.cpp  QSStreamer.cpp  QUASARStreamer.cpp  QuadStreamStreamer.cpp  QuadsReceiver.cpp  QuadsStreamer.cpp  Recorder.cpp  VideoStreamer.cpp  VideoTexture.cpp
apps/Common/src/CudaGLInterop/: CudaUtils.cpp
apps/Common/src/Networking/: DataReceiverTCP.cpp  DataReceiverUDP.cpp  DataStreamerTCP.cpp  (+1 more)
(+184 files in other folders)
